<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <GVL Name="gvl_RETAIN" Id="{81896dc9-140d-488f-8703-0c7f43325d42}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL RETAIN
	//Brauchwassermenge verbraucht in m3
    waterConsumption : WORD;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>